--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ header h1 {
   </header>  <div class="container">
     <div class="product-card">
       <img src="https://down-id.img.susercontent.com/file/id-11134207-7ras8-m1o1g24k2fy3dd.webp" alt="Produk 1">
-      <h3>freemir Bundle Set Wajan Penggorengan</h3>
+      <h3>freemir Bundle Set Wajan</h3>
       <a href="https://s.shopee.co.id/6fUB8ok0Jq?share_channel_code=1" class="cta-button" target="_blank">Cek Sekarang</a>
     </div><div class="product-card">
   <img src="https://down-id.img.susercontent.com/file/id-11134207-7qul5-lk0jxutvcdgb57.webp" alt="Produk 2">
