--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@ header h1 {
   <h3>HALU Rak Gantung Serbaguna</h3>
   <a href="https://s.shopee.co.id/1qOvO33ybi?share_channel_code=1" class="cta-button" target="_blank">Cek Sekarang</a>
 </div>
+
+<div class="product-card">
+  <img src="https://down-id.img.susercontent.com/file/id-11134207-7rasm-m0pikytljsraf6.webp" alt="Produk 5">
+  <h3>Sandal Sepatu Olahraga</h3>
+  <a href="https://s.shopee.co.id/8KcX4Pj6vr?share_channel_code=1" class="cta-button" target="_blank">Cek Sekarang</a>
+</div>
   </div>
 </body>
 </html>
