--- a/index.html
+++ b/index.html
@@ -129,6 +129,24 @@ header h1 {
   <h3>Sandal Sepatu Olahraga</h3>
   <a href="https://s.shopee.co.id/8KcX4Pj6vr?share_channel_code=1" class="cta-button" target="_blank">Cek Sekarang</a>
 </div>
+
+<div class="product-card">
+  <img src="https://down-id.img.susercontent.com/file/id-11134207-7rbk3-m7qj3i7d7qkw9d.webp" alt="Produk 5">
+  <h3>LENTIVEN TWS Full Bass M19</h3>
+  <a href="https://s.shopee.co.id/4fjEhYIj1H?share_channel_code=1" class="cta-button" target="_blank">Cek Sekarang</a>
+</div>
+
+<div class="product-card">
+  <img src="https://down-id.img.susercontent.com/file/id-11134207-7rbkd-m8zulp4vigb50c.webp" alt="Produk 5">
+  <h3>Ecentio botol air minum Portable 500ml</h3>
+  <a href="https://s.shopee.co.id/4fjEhYIj1H?share_channel_code=1" class="cta-button" target="_blank">Cek Sekarang</a>
+</div>
+
+<div class="product-card">
+  <img src="https://down-id.img.susercontent.com/file/id-11134207-7qul2-li85oqwgktbva3.webp" alt="Produk 5">
+  <h3>AKULA Jas Hujan Raincoat Pria Wanita</h3>
+  <a href="https://s.shopee.co.id/AUh1eKH6A9?share_channel_code=1" class="cta-button" target="_blank">Cek Sekarang</a>
+</div>
   </div>
 </body>
 </html>
