--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ header h1 {
 <div class="product-card">
   <img src="https://down-id.img.susercontent.com/file/id-11134207-7rbkd-m8zulp4vigb50c.webp" alt="Produk 5">
   <h3>Ecentio botol air minum Portable 500ml</h3>
-  <a href="https://s.shopee.co.id/4fjEhYIj1H?share_channel_code=1" class="cta-button" target="_blank">Cek Sekarang</a>
+  <a href="https://s.shopee.co.id/3LDr780a8X?share_channel_code=1" class="cta-button" target="_blank">Cek Sekarang</a>
 </div>
 
 <div class="product-card">
